@@ -1004,7 +1004,6 @@ message("")
 message("        Maintainer mode .............: ${enable_maintainer_mode}")
 message("        Documentation................: ${enable_documentation}")
 message("        Model checking ..............: ${HAVE_MC}")
-message("        Tracing mode ................: ${enable_tracing}")
 message("        Jedule  mode ................: ${enable_jedule}")
 message("        Graphviz mode ...............: ${HAVE_GRAPHVIZ}")
 message("        Sigc++ mode .................: ${SIMGRID_HAVE_LIBSIG}")
